Rename snailload.h and header_data
This is a preparation to handle the "server full" situation more
gracefully.

--- a/demo_server/Makefile
+++ b/demo_server/Makefile
@@ -11,4 +11,4 @@ clean:
 	rm -f $(TARGETS) *.o
 
 demo_server: demo_server.o
-demo_server.o: demo_server.c snailload.h
+demo_server.o: demo_server.c snailload_pixeldata.h
